--- a/front/principal/templates/ventana_principal.html
+++ b/front/principal/templates/ventana_principal.html
@@ -11,11 +11,11 @@ height: 100%;
 }
 
 h1 {
-  font-family:sans-serif;
-  text-align: center;
+  font: oblique bold 120% cursive;
+  text-align: left;
   font-style: bold;
   color: black;
-  font-size: 35px;
+  font-size: 50px;
 }
 
 body {
